@@ -1,0 +1,1 @@
+<http://example.org/thing> <http://example.org/label> "\u0008" .
