@@ -16,6 +16,8 @@ serd (UNRELEASED) unstable; urgency=low
   * Add serd_strtod(), serd_node_new_decimal(), and serd_node_new_integer()
     for locale-independent numeric node parsing/serialising.
   * Add serd_file_sink for the common case of writing to a FILE* stream.
+  * Escape ASCII control characters in output (e.g. fix problems with string
+    literals that start with a backspace)
 
  -- David Robillard <d@drobilla.net>  (UNRELEASED)
 
